Refactor: Lua API Backend

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,5 @@
 {
   "diagnostics": {
-    "globals": ["Cube", "Material", "Translate", "Rotate", "Scale"]
+    "globals": ["Cube", "Material", "Translate", "Rotate", "Scale", "Input"]
   }
 }
