Viewport is now not the responsability of the rederer and a basic window resizing command added with window resizing supported.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,10 @@ target_include_directories(${NAME} PUBLIC
 )
 
 target_include_directories(${NAME} PUBLIC
+    ${CMAKE_SOURCE_DIR}/project/source/Core/windowmanager/include
+)
+
+target_include_directories(${NAME} PUBLIC
     ${CMAKE_SOURCE_DIR}/project/source/Core/console/include
 )
 
